# plugins

./: .gitignore  .hgignore  CMakeLists.txt  README  buildset.cmake  buildset.cmake.example  custom_buildsets.txt  icons.qrc.in  plugin.cpp.in  project.conf  project.conf.example  readme.md
cmake/: declaration_macros.cmake  macros.cmake  plugin.cpp.in  readme.cmake  setup.cmake
cmake/readme_src/: readme.md.in  welcome.md
data_structures/: AsyncGrabber.cmake  AsyncGrabber.cpp  AsyncGrabber.fwd.h  AsyncGrabber.h  KeyPointData.cmake  KeyPointData.cpp  KeyPointData.fwd.h  KeyPointData.h  KeypointData.cmake  KeypointData.cpp  KeypointData.fwd.h  KeypointData.h  KeypointListData.cmake  KeypointListData.cpp  KeypointListData.fwd.h  KeypointListData.h  RGBAPointCloudData.cmake  RGBAPointCloudData.cpp  RGBAPointCloudData.fwd.h  RGBAPointCloudData.h  StringData.cmake  StringData.h
devices/schunk/: PowerCubeChain.cmake  PowerCubeChain.cpp  PowerCubeChain.fwd.h  PowerCubeChain.h  SMPCanBusChannel.cmake  SMPCanBusChannel.cpp  SMPCanBusChannel.fwd.h  SMPCanBusChannel.h
external_libraries/: keypoints.cmake  naoqi.cmake  naoqi.md  ntcan.cmake  openni.cmake  pcl.cmake  vislab_toolbox.cmake  vislab_toolbox.md
group_templates/image_processing/: steering_filter_processing.cmake  steering_filter_processing.json
group_templates/object_recognition/: backward_path.cmake  backward_path.json  forward_path.cmake  forward_path.json
kernels/: MotionKernel.cmake  MotionKernel.cpp  MotionKernel.fwd.h  MotionKernel.h  SteerableKernel.cmake  SteerableKernel.cpp  SteerableKernel.fwd.h  SteerableKernel.h
plots/dft/: my_special_plot.cmake
plots/utilities/: StringPlot.cmake  StringPlot.cpp  StringPlot.fwd.h  StringPlot.h
scripts/cpp/: ExecuteFunctionOnSteps.cmake  ExecuteFunctionOnSteps.cpp  ExecuteFunctionOnSteps.fwd.h  ExecuteFunctionOnSteps.h  RecruitGroup.cmake  RecruitGroup.cpp  RecruitGroup.fwd.h  RecruitGroup.h  folder.md  my_script.cmake
scripts/gnuplot/: folder.md
scripts/matlab/: folder.md
scripts/python/: folder.md
shared_buildsets/: LompFaubelSchoener2016.cmake  folder.md  my_plugin.txt
steps/: folder.md
steps/KinectUtilities/: ConvertDepthToXyz.cmake  ConvertDepthToXyz.cpp  ConvertDepthToXyz.fwd.h  ConvertDepthToXyz.h  KinectReader.cmake  KinectReader.cpp  KinectReader.fwd.h  KinectReader.h  TransformPointCloud.cmake  TransformPointCloud.cpp  TransformPointCloud.fwd.h  TransformPointCloud.h
steps/dft/: my_special_field.cmake
steps/dynamics/: InhibitoryNeuron.cmake  InhibitoryNeuron.cpp  InhibitoryNeuron.fwd.h  InhibitoryNeuron.h  PatternMemory.cmake  PatternMemory.cpp  PatternMemory.fwd.h  PatternMemory.h  SerialOrderRecruiting.cmake  SerialOrderRecruiting.cpp  SerialOrderRecruiting.fwd.h  SerialOrderRecruiting.h
steps/image_processing/: GeometricImageTransform.cmake  GeometricImageTransform.cpp  GeometricImageTransform.fwd.h  GeometricImageTransform.h  SteerC2C3.cmake  SteerC2C3.cpp  SteerC2C3.fwd.h  SteerC2C3.h  SteerableFilter.cmake  SteerableFilter.cpp  SteerableFilter.fwd.h  SteerableFilter.h  SteeringAngle.cmake  SteeringAngle.cpp  SteeringAngle.fwd.h  SteeringAngle.h  SteeringEnergy.cmake  SteeringEnergy.cpp  SteeringEnergy.fwd.h  SteeringEnergy.h
steps/keypoints/: DoubleStoppedCellResponses.cmake  DoubleStoppedCellResponses.cpp  DoubleStoppedCellResponses.fwd.h  DoubleStoppedCellResponses.h  KeypointDataExtractorBase.cmake  KeypointDataExtractorBase.cpp  KeypointDataExtractorBase.fwd.h  KeypointDataExtractorBase.h  KeypointExtractor.cmake  KeypointExtractor.cpp  KeypointExtractor.fwd.h  KeypointExtractor.h  KeypointLambdaMapping.cmake  KeypointLambdaMapping.cpp  KeypointLambdaMapping.fwd.h  KeypointLambdaMapping.h  KeypointLinesAndEdges.cmake  KeypointLinesAndEdges.cpp  KeypointLinesAndEdges.fwd.h  KeypointLinesAndEdges.h  KeypointPatchRescaler.cmake  KeypointPatchRescaler.cpp  KeypointPatchRescaler.fwd.h  KeypointPatchRescaler.h  KeypointVisualization.cmake  KeypointVisualization.cpp  KeypointVisualization.fwd.h  KeypointVisualization.h
steps/motion_detection/: CounterChangeCombination.cmake  CounterChangeCombination.cpp  CounterChangeCombination.fwd.h  CounterChangeCombination.h  MotionGradient.cmake  MotionGradient.cpp  MotionGradient.fwd.h  MotionGradient.h
steps/nao/: NaoCamera.cmake  NaoCamera.cpp  NaoCamera.fwd.h  NaoCamera.h
steps/neuraloscillator/: ApproximateCoupling.cmake  ApproximateCoupling.cpp  ApproximateCoupling.fwd.h  ApproximateCoupling.h  ApproximateCouplingVector.cmake  ApproximateCouplingVector.cpp  ApproximateCouplingVector.fwd.h  ApproximateCouplingVector.h  ApproximateInput.cmake  ApproximateInput.cpp  ApproximateInput.fwd.h  ApproximateInput.h  EquidistantMatrix.cmake  EquidistantMatrix.cpp  EquidistantMatrix.fwd.h  EquidistantMatrix.h  EquidistantRidge.cmake  EquidistantRidge.cpp  EquidistantRidge.fwd.h  EquidistantRidge.h  NeuralTimer.cmake  NeuralTimer.cpp  NeuralTimer.fwd.h  NeuralTimer.h
steps/object_recognition/: FeatureStacks.cmake  FeatureStacks.cpp  FeatureStacks.fwd.h  FeatureStacks.h  KeypointEdgeHistogramExtractor.cmake  KeypointEdgeHistogramExtractor.cpp  KeypointEdgeHistogramExtractor.fwd.h  KeypointEdgeHistogramExtractor.h  ReceptiveFieldHistogram.cmake  ReceptiveFieldHistogram.cpp  ReceptiveFieldHistogram.fwd.h  ReceptiveFieldHistogram.h  TopDownReconstruction.cmake  TopDownReconstruction.cpp  TopDownReconstruction.fwd.h  TopDownReconstruction.h  ViewCombination.cmake  ViewCombination.cpp  ViewCombination.fwd.h  ViewCombination.h
steps/sources/: ImageProvider.cmake  ImageProvider.cpp  ImageProvider.fwd.h  ImageProvider.h  KinectReader.cmake  KinectReader.cpp  KinectReader.fwd.h  KinectReader.h  LinearSpatialPattern.cmake  LinearSpatialPattern.cpp  LinearSpatialPattern.fwd.h  LinearSpatialPattern.h  OpenGLTargetVisualisation.cmake  OpenGLTargetVisualisation.cpp  OpenGLTargetVisualisation.fwd.h  OpenGLTargetVisualisation.h  SpatialPattern.cmake  SpatialPattern.cpp  SpatialPattern.fwd.h  SpatialPattern.h
steps/utilities/: AttentionSlice.cmake  AttentionSlice.cpp  AttentionSlice.fwd.h  AttentionSlice.h  (+87 more)
